.k8s/minikube/backend/message-hub.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: message-hub
  namespace: backend
spec:
  selector:
    matchLabels:
      app: message-hub
  template:
    metadata:
      labels:
        app: message-hub
    spec:
      terminationGracePeriodSeconds: 5
      hostAliases:
      - ip: "192.168.64.10"
        hostnames:
        - "central.orbits.local"
      containers:
      - name: message-hub
        image: message-hub:latest
        imagePullPolicy: Never
        ports:
        - containerPort: 12002
---
apiVersion: v1
kind: Service
metadata:
  name: message-hub-service
  namespace: backend
spec:
  type: ClusterIP
  selector:
    app: message-hub
  ports:
  - name: http
    port: 12002
