.k8s/minikube/backend/postgres-message-hub-db.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: db-message-hub-service
  namespace: backend
  labels:
    app: db-message-hub-service
spec:
  ports:
    - port: 5432
  selector:
    app: db-message-hub-service
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: postgres-message-hub-db
  namespace: backend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: db-message-hub-service
  template:
    metadata:
      labels:
        app: db-message-hub-service
    spec:
      containers:
        - name: postgres
          image: postgres:13.1
          ports:
          - containerPort: 5432
          volumeMounts:
          - name: message-hub-db-data
            mountPath: /var/lib/postgresql/data
      volumes:
      - name: message-hub-db-data
        persistentVolumeClaim:
          claimName: message-hub-db-pvc
