.k8s/minikube/backend/user-hub.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: user-hub
  namespace: backend
spec:
  selector:
    matchLabels:
      app: user-hub
  template:
    metadata:
      labels:
        app: user-hub
    spec:
      terminationGracePeriodSeconds: 5
      volumes:
        - name: user-hub-key
          secret:
            secretName: user-hub-key
        - name: kubectl
          emptyDir: {}
        - name: doctl
          emptyDir: {}
        - name: koto-writeable
          emptyDir: {}
      hostAliases:
      - ip: "192.168.64.10"
        hostnames:
        - "node1.orbits.local"
      containers:
      - name: user-hub
        image: user-hub:latest
        imagePullPolicy: Never
        ports:
        - containerPort: 12001
        volumeMounts:
          - name: user-hub-key
            mountPath: "/tmp"
          - name: kubectl
            subPath: kubectl
            mountPath: /usr/local/bin/kubectl
          - name: doctl
            subPath: doctl
            mountPath: /usr/local/bin/doctl
          - mountPath: /koto-writeable
            name: koto-writeable
---
apiVersion: v1
kind: Service
metadata:
  name: user-hub-service
  namespace: backend
spec:
  type: ClusterIP
  selector:
    app: user-hub
  ports:
  - name: http
    port: 12001
