.k8s/minikube/backend/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: local-ingress
  namespace: backend
  annotations:
      kubernetes.io/ingress.class: nginx
    # nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
    - host: central.orbits.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: user-hub-service
                port:
                  number: 12001
    - host: node1.orbits.local
      http:
        paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: message-hub-service
              port:
                number: 12002
